# hackathon_indaba_senegal_2024

./: .codespell-ignores.txt  .gitignore  .pre-commit-config.yaml  Makefile  README.md  Snake_Venom_sequencing_Indaba_Practical_2024.ipynb  Team_KASA_Instadeep_Winner_Solution_208179_SODIQ_BABAWALE_IND.ipynb  hackathon_starter_notebook.ipynb  pyproject.toml  starter_notebook.ipynb
