[project]
name = "hackathon-indaba-senegal-2024"
version = "0.1.0"
description = "Deep Learning Indaba hacakthon"
authors = [
    { name = "Jeroen Van Goey", email = "j.vangoey@instadeep.com" }
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "instanovo>=0.1.7",
    "pre-commit>=3.8.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.0.0",
    "koinapy>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
